@@ -61,4 +61,4 @@ INCLUDE += \
 -I$(TENSOR_ROOT)/third_party/flatbuffers/include
 
 CCFLAGS += -DNDEBUG -g -DTF_LITE_STATIC_MEMORY --std=c++11 -g -fno-rtti -fpermissive -Wno-sign-compare -Wno-conversion -Wno-sign-conversion -Wno-missing-field-initializers -Wno-type-limits -Wno-unused-parameter -Wno-unused-variable
-
+DEFINES += -DUSE_TENSORFLOW=1
